--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -33,6 +33,8 @@
 @media screen and (max-width: 500px) {
   #favorite-music .title {
     font-size: 24px; }
+  #about-me .container .row .photos .background-photos-grid {
+    width: 150%; }
   #footer .container .wrap {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
