--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -751,7 +751,7 @@ header {
     #favorite-films .container .films .film {
       margin-bottom: 20px;
       width: calc(50% - 20px);
-      min-height: 329px; }
+       }
       #favorite-films .container .films .film .film-img {
         width: 100%; }
         #favorite-films .container .films .film .film-img img {
